--- a/Project One - Age Calculator/style.css
+++ b/Project One - Age Calculator/style.css
@@ -27,7 +27,7 @@ body{
     color: rgb(54, 67, 80);
 } 
 
-form {
+.birthdate-input {
     display: flex;
     flex-direction: column;
     align-items: center;;
@@ -73,5 +73,6 @@ button:hover{
     margin-top: 20px;
     font-size: 1.5em;
     font-size: bold;
-    font-weight: 500;
+    font-weight: 600;
+    color: indianred;
 }
